# langrila

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release_pypi.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release_pypi.yml
data/: sample_prompt_template.txt
notebooks/: 01.introduction.ipynb  02.function_calling.ipynb  02.tool_calling_and_dependency_injection.ipynb  03.multi_agent.ipynb  03.structured_output.ipynb  04.conversation_memory.ipynb  04.media_and_file_input.ipynb  05.conversation_memory.ipynb  05.multi_modal_io.ipynb  06.embedding_text.ipynb  07.basic_rag.ipynb
src/langrila/: __init__.py  base.py  base_assembly.py  data.py  llm_wrapper.py  logger.py  message.py  message_content.py  mixin.py  model_config.py  prompt_template.py  result.py  tools.py  types.py  usage.py  utils.py  warnings.py
src/langrila/anthropic/: __init__.py  client.py
src/langrila/aws/: __init__.py  client.py
src/langrila/chat_module/: base.py  chat.py  function_calling.py
src/langrila/claude/: __init__.py  assembly.py  claude_utils.py  message.py  model.py  tools.py
src/langrila/claude/anthropic/: client.py
src/langrila/claude/bedrock/: client.py
src/langrila/claude/llm/: chat.py  function_calling.py
src/langrila/claude/vertexai/: client.py
src/langrila/conversation_adjuster/: truncate.py
src/langrila/core/: __init__.py  _context.py  agent.py  client.py  config.py  embedding.py  error.py  griffe.py  internal_prompt.py  logger.py  memory.py  message.py  metadata.py  model.py  prompt.py  pydantic.py  pydantic_utils.py  response.py  retrieval.py  retry.py  tool.py  typing.py  usage.py
src/langrila/database/: __init__.py  base.py  chroma.py  qdrant.py  usearch.py
src/langrila/database/metadata_store/: sqlite.py
src/langrila/embedding/: base.py  openai.py
src/langrila/file_utils/: pdf.py  video.py
src/langrila/filter/metadata/: __init__.py  base.py  sqlite.py
src/langrila/gemini/: __init__.py  assembly.py  client.py  gemini_utils.py  message.py  model.py
src/langrila/gemini/genai/: __init__.py  client.py  embedding.py  message.py  tools.py
src/langrila/gemini/llm/: chat.py  function_calling.py
src/langrila/gemini/vertexai/: __init__.py  client.py  embedding.py  message.py  tools.py
src/langrila/google/: __init__.py  client.py  gemini_utils.py
src/langrila/legacy/: base.py  base_assembly.py  llm_wrapper.py  logger.py  message_content.py  types.py
src/langrila/legacy/claude/: __init__.py  tools.py
src/langrila/legacy/claude/anthropic/: client.py
src/langrila/legacy/claude/llm/: function_calling.py
src/langrila/legacy/gemini/: __init__.py  embedding.py  model_config.py
src/langrila/legacy/gemini/genai/: __init__.py  client.py  message.py
src/langrila/legacy/gemini/llm/: function_calling.py
src/langrila/legacy/gemini/vertexai/: client.py  embedding.py
src/langrila/legacy/openai/: __init__.py  embedding.py  model_config.py
src/langrila/legacy/openai/azure/: client.py
src/langrila/legacy/openai/origin/: client.py
src/langrila/memory/: cosmos.py  in_memory.py  json.py  pickle.py  s3.py
src/langrila/openai/: __init__.py  assembly.py  client.py  embedding.py  message.py  model.py  model_config.py  openai_utils.py  tools.py
src/langrila/openai/azure/: client.py
src/langrila/openai/conversation_adjuster/: truncate.py
src/langrila/openai/llm/: chat.py  function_calling.py
src/langrila/openai/origin/: client.py
