[tool.poetry]
name = "langrila"
version = "0.0.6"
description = "useful tool to use ChatGPT with OpenAI API or Azure"
authors = ["taikinman <okipedia6161@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
openai = {version = "^1.31.1", optional = true}
tiktoken = {version = "^0.7.0", optional = true}
google-generativeai = {version = "^0.6.0", optional = true}
qdrant-client = {version = "^1.9.1", optional = true}


[tool.poetry.extras]
openai = ["openai", "tiktoken"]
gemini = ["google-generativeai"]
qdrant = ["qdrant-client"]
all = ["openai", "tiktoken", "google-generativeai", "qdrant-client"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B024", # abstract class has no abstract methods
]

unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used, 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = true
