[tool.poetry]
name = "langrila"
version = "0.0.0" # poetry-dynamic-versioning
description = "useful tool to use API-based LLM"
authors = ["taikinman <okipedia6161@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/taikinman/langrila"
repository = "https://github.com/taikinman/langrila"
classifiers = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
pydantic = "^2.8.2"
openai = {version = "^1.40.0", optional = true}
tiktoken = {version = "^0.7.0", optional = true}
google-generativeai = {version = "^0.6.0", optional = true}
google-cloud-aiplatform = {version = "^1.38.0", optional = true}
qdrant-client = {version = "^1.9.1", optional = true}
chromadb = {version = "^0.5.0", optional = true}
usearch = {version = "^2.12.0", optional = true}
azure-cosmos = {version = "^4.7.0", optional = true}
boto3 = {version = "^1.35.0", optional = true}
anthropic = {version = "^0.36.0", optional = true}
pypdfium2 = {version = "^4.30.0", optional = true}
imageio = {version = "^2.34.2", optional = true}
imageio-ffmpeg = {version = "^0.5.1", optional = true}
soundfile = {version = "^0.12.1", optional = true}
moviepy = {version = "^1.0.3", optional = true}

[tool.poetry.extras]
openai = ["openai", "tiktoken"]
gemini = ["google-generativeai"]
qdrant = ["qdrant-client"]
chroma = ["chromadb"]
usearch = ["usearch"]
cosmos = ["azure-cosmos"]
vertexai = ["google-cloud-aiplatform"]
s3 = ["boto3"]
claude = ["anthropic"]
bedrock = ["boto3"]
pdf = ["pypdfium2"]
video = ["imageio", "imageio-ffmpeg"]
audio = ["soundfile", "moviepy"]
all = ["openai", "tiktoken", "google-generativeai", "google-cloud-aiplatform", "qdrant-client", "chromadb", "usearch", "azure-cosmos", "boto3", "anthropic", "pypdfium2", "imageio", "imageio-ffmpeg", "soundfile", "moviepy"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.post{{ distance }}{% endif %}"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B024", # abstract class has no abstract methods
]

unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used, 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_untyped_calls = false # because this rule is applied to third-party packages as well, it's too strict
disallow_incomplete_defs = true
disallow_untyped_decorators = false # because this rule is applied to third-party packages as well, it's too strict
allow_untyped_globals = false # use Final type instead
allow_redefinition = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
pretty = true
strict = true

exclude = "tests"

[tool.black]
line-length = 100